Fix alignment of fullscreen button

--- a/src/static/stylesheets/gallery.scss
+++ b/src/static/stylesheets/gallery.scss
@@ -84,7 +84,7 @@
       border: 0;
       outline: 0;
       background: rgba(0, 0, 0, 0.25);
-      right: 42px;
+      right: 48px;
       bottom: 0;
       z-index: 100;
       border-radius: 3px;
